Log in and sign out pages added, adding profile pages

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,3 @@
-<h2>Welcome to Brain Bank!<h2>
-
 <% if logged_in? %>
    <p>What have you learned today?</p>
    <form action="/" method="post">
@@ -9,5 +7,5 @@
    </form>
 
 <% else %>
-   <p>Please <a href="/login">login</a> or <a href="/users/signup">sign up</a>.</p>
+   <p>Please <a href="/login">login</a> or <a href="/signup">sign up</a>.</p>
 <% end %>
