Correctly allocating user and page controller methods.

--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -30,6 +30,6 @@
    </li>
 </ul>
 
-<form action="/signout" method="post">
+<form action="/logout" method="post">
    <button type="submit">Sign Out</button>
 </form>
