--- a/app/views/users/posts.erb
+++ b/app/views/users/posts.erb
@@ -1,4 +1,4 @@
-<% posts = Post.all.sort_by(:date_added).reverse! %>
+<% posts = Post.all.select(id: @user.id).sort_by(:date_added).reverse! %>
 <% posts.each do |post| %>
    <h2><%= post.date_added.strftime("%d %B %y") %></h2>
    <p><%= post.content %>
