--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -17,7 +17,7 @@
 
 <form action="/new" method="post">
    <textarea type="text" name="content" rows="3", cols="50"></textarea>
-   <p>Make this post public? <input type="checkbox" id="is_public"></p>
+   <p>Make this post public? <input type="checkbox" name="is_public"></p>
    <input type="submit">
 </form>
 <br><br>
