--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -21,15 +21,5 @@
    <input type="submit">
 </form>
 <br><br>
-<ul>
-   <li>
-      <a href="/feed">Feed</a>
-   </li>
-   <li>
-      <a href="<%= current_user.username %>/posts">My Posts</a>
-   </li>
-</ul>
 
-<form action="/logout" method="post">
-   <button type="submit">Sign Out</button>
-</form>
+<form action="/logout" method="post"><button type="submit">Sign Out</button></form>
