--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -8,9 +8,9 @@
    <input type="text" name="name">
    <br><br>
    <p><b>Email:</b></p>
-   <input type="text" name="email">
+   <input type="email" name="email">
    <br><br>
    <p><b>Password:</b></p>
-   <input type="text" name="password">
+   <input type="password" name="password">
    <input type="submit">
 </form>
