--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -1,5 +1,5 @@
-<form action="/new" method="post">
-   <textarea type="text" name="content" rows="3", cols="50"></textarea>
+<form action="/<%= params[:username] %>/posts/edit/<%= params[:post_id]%>" method="post">
+   <textarea type="text" name="content" rows="3", cols="50"><%= @content %></textarea>
    <p>Make this post public? <input type="checkbox" name="is_public"></p>
    <input type="submit">
 </form>
