--- a/app/views/users/other_user_profile.erb
+++ b/app/views/users/other_user_profile.erb
@@ -1,1 +1,19 @@
-<h2>Test</h2>
+<h3><%= params[:username] %>'s thoughts</h3>
+
+<% posts = Post.all.select{ |post| post.user_id == @user.id }.sort_by{ |post| post.date_added }.reverse! %>
+<% if posts.size > 0 %>
+   <% viewers_own_account = (posts.first.user_id == session[:id]) %>
+   <% posts.each do |post| %>
+      <% if !post[:is_public] && !viewers_own_account %>
+      <% else %>
+            <h3><%= post.date_added.strftime("%d %B %Y") %></h3>
+            <p><%= post.content %></p>
+            <% if viewers_own_account %>
+               <h5><a href="/<%= @user.username %>/posts/edit/<%= post.id %>">(edit)</a> <a href="/<%= @user.username %>/posts/delete/<%= post.id %>">(delete)</a> <b><%= "(private)" if !post[:is_public] %></b></h5>
+            <% end %>
+            <br \>
+      <% end %>
+   <% end %>
+<% else %>
+   <h3>This user has not committed any fun facts yet!</h3>
+<% end %>
