--- a/app/views/users/posts.erb
+++ b/app/views/users/posts.erb
@@ -1,13 +1,17 @@
 <% posts = Post.all.select{ |post| post.user_id == @user.id }.sort_by{ |post| post.date_added }.reverse! %>
-<% viewers_own_account = (posts.first.user_id == session[:id]) %>
-<% posts.each do |post| %>
-   <% if !post[:is_public] && !viewers_own_account %>
-   <% else %>
-         <h3><%= post.date_added.strftime("%d %B %Y") %></h3>
-         <p><%= post.content %></p>
-         <% if viewers_own_account %>
-            <h5><a href="/<%= @user.username %>/posts/edit/<%= post.id %>">(edit)</a> <a href="/<%= @user.username %>/posts/delete/<%= post.id %>">(delete)</a> <b><%= "(private)" if !post[:is_public] %></b></h5>
-         <% end %>
-         <br \>
+<% if posts.size > 0 %>
+   <% viewers_own_account = (posts.first.user_id == session[:id]) %>
+   <% posts.each do |post| %>
+      <% if !post[:is_public] && !viewers_own_account %>
+      <% else %>
+            <h3><%= post.date_added.strftime("%d %B %Y") %></h3>
+            <p><%= post.content %></p>
+            <% if viewers_own_account %>
+               <h5><a href="/<%= @user.username %>/posts/edit/<%= post.id %>">(edit)</a> <a href="/<%= @user.username %>/posts/delete/<%= post.id %>">(delete)</a> <b><%= "(private)" if !post[:is_public] %></b></h5>
+            <% end %>
+            <br \>
+      <% end %>
    <% end %>
+<% else %>
+   <h3>You haven't made any posts yet!</h3>
 <% end %>
