--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -2,12 +2,12 @@
 
 <form action="/signup" method="post">
    <p><b>Username:</b></p>
-   <input type="text" name="username">
+   <input type="text" name="username"><p> Sorry, this username has already been taken.</p>
    <br><br>
    <p><b>Real name:</b></p>
    <input type="text" name="name">
    <br><br>
-   <p><b>Email:</b></p>
+   <p><b>Email:</b></p><p> Sorry, there is already an account registered with this address.</p>
    <input type="email" name="email">
    <br><br>
    <p><b>Password:</b></p>
