--- a/app/views/users/feed.erb
+++ b/app/views/users/feed.erb
@@ -1,3 +1,4 @@
+<h3>See what other people are thinking!</h3>
 <% posts = Post.all.select{ |post| post.is_public == true }.sort_by{ |post| post.date_added }.reverse! %>
 <% if posts.size > 0 %>
    <% posts.each do |post| %>
@@ -6,9 +7,9 @@
       <h3><%= post.date_added.strftime("%d %B %Y") %></h3>
       <p><%= post.content %> <b>(<a href="/<%= author.username %>"><%= author.username %></a>)</b></p>
       <% if viewers_own_post %>
-         <h5><a href="/<%= @user.username %>/posts/edit/<%= post.id %>">(edit)</a> <a href="/<%= @user.username %>/posts/delete/<%= post.id %>">(delete)</a></b></h5>
+         <h4><a href="/<%= @user.username %>/posts/edit/<%= post.id %>">(edit)</a> <a href="/<%= @user.username %>/posts/delete/<%= post.id %>">(delete)</a></h4>
       <% end %>
-      <br \>
+      <br>
    <% end %>
 <% else %>
    <h3>No posts yet!</h3>
