--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -13,7 +13,7 @@
 <p>What have you learned today?</p>
 
 <form action="/new" method="post">
-   <textarea type="text" name="content" rows="3", cols="50"></textarea>
-   <p>Make this post public? <input type="checkbox" name="is_public"></p>
+   <textarea type="text" name="post[content]" rows="3", cols="50"></textarea>
+   <p>Make this post public? <input type="checkbox" name="post[is_public]"></p>
    <input type="submit">
 </form>
