--- a/app/views/users/other_user_profile.erb
+++ b/app/views/users/other_user_profile.erb
@@ -13,5 +13,5 @@
       <% end %>
    <% end %>
 <% else %>
-   <h3>This user has not committed any fun facts yet!</h3>
+   <h3>This user has not committed any facts yet!</h3>
 <% end %>
