--- a/app/views/users/feed.erb
+++ b/app/views/users/feed.erb
@@ -9,6 +9,7 @@
       <% if viewers_own_post %>
          <h4><a href="/<%= @user.username %>/posts/edit/<%= post.id %>">(edit)</a> <a href="/<%= @user.username %>/posts/delete/<%= post.id %>">(delete)</a></h4>
       <% end %>
+      <% # ▲ <input type="checkbox" name="vote"   <%= @checked %>>
       <br>
    <% end %>
 <% else %>
