--- a/app/views/users/posts.erb
+++ b/app/views/users/posts.erb
@@ -8,7 +8,7 @@
             <h3><%= post.date_added.strftime("%d %B %Y") %></h3>
             <p><%= post.content %></p>
             <% if viewers_own_account %>
-               <h4><a href="/<%= @user.username %>/posts/edit/<%= post.id %>">(edit)</a> <a href="/<%= @user.username %>/posts/delete/<%= post.id %>">(delete)</a> <b><%= "(private)" if !post[:is_public] %></b></h4>
+               <h4><a href="/<%= @user.username %>/posts/<%= post.id %>/edit">(edit)</a> <a href="/<%= @user.username %>/posts/<%= post.id %>/delete">(delete)</a> <b><%= "(private)" if !post[:is_public] %></b></h4>
             <% end %>
             <br \>
       <% end %>
