--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>Brain Bank</title>
+    <title>Brain Bank 🧠</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
     
     <div class="container">
-      <h1>Brain Bank</h1>
+      <h1>Brain Bank 🧠</h1>
       <% if logged_in? %>
         <% feed_href = "feed" %>
         <% create_post_href = "#{current_user.username}/posts/new" %>
