--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,16 +14,18 @@
         <% create_post_href = "#{current_user.username}/posts/new" %>
         <% view_posts_href = "#{current_user.username}" %>
         <% form_action = "logout" %>
+        <% form_method = "post" %>
         <% button_text = "Log Out" %>
       <% else %>
         <% feed_href, create_post_href, view_posts_href, form_action = "login" %>
+        <% form_method = "get" %>
         <% button_text = "Log In" %>
       <% end %>
       <ul>
         <li><a href="/<%= feed_href %>">Feed</a></li>
         <li><a href="/<%= create_post_href %>">Create Post</a></li>
         <li><a href="/<%= view_posts_href %>">My Posts</a></li>
-        <li><form action="/<%= form_action %>" method="post"><button type="submit" class="btn btn-link"><%= button_text %></button></form></li>
+        <li><form action="/<%= form_action %>" method="<%= form_method %>"><button type="submit" class="btn btn-link"><%= button_text %></button></form></li>
       </ul>
       <br><br>
       <%= yield %>
